<resources>
    <string name="app_name">Seed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_navigation_menus">Navigation Menus</string>
    <string name="title_navigation_home">Navigation Home</string>
    <string name="title_home">Home</string>
    <string name="title_camera_x">Camera X</string>
    <string name="title_about">About</string>
    <string name="title_register">Register</string>
    <string name="title_login">Login</string>
    <string name="title_auth_flow">Auth Flow</string>
    <string name="title_onboarding">Onboarding</string>
    <string name="btn_finish">Finish</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_chat">Chat</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>
    <string name="onboarding_title_step_0">Welcome to Seed!</string>
    <string name="onboarding_title_step_1">Step 1: Authenticate yourself!</string>
    <string name="onboarding_title_step_2">Step 2: Enjoy the experience!</string>
    <string name="onboarding_subtitle_step_0">Seed is a media that is social. Like Twitter or Facebook, but worse!</string>
    <string name="onboarding_subtitle_step_1">Register a new account if you\'re new. Or login using your existing account.</string>
    <string name="onboarding_subtitle_step_2">Browse around the app and have a lot of fun!</string>
    <string name="login_not_have_account">Doesn\'t have an account?</string>
    <string name="email">Email</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="avatar">Avatar</string>
    <string name="title_chat_detail">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="title_explore">Explore</string>
    <string name="btn_retry">Retry</string>
    <string name="title_post">Post</string>
    <string name="title_user">User</string>
    <string name="btn_take_picture">Take Picture</string>
    <string name="share_text_chooser_title">Share this text with</string>
</resources>