<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navui_nav_graph"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.hanmajid.android.seed.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/chat_detail_fragment"
        android:name="com.hanmajid.android.seed.ui.chat.detail.ChatDetailFragment"
        android:label="@string/title_chat_detail"
        tools:layout="@layout/fragment_chat_detail">
        <argument
            android:name="chatId"
            app:argType="string" />

        <deepLink app:uri="www.android.hanmajid.com/{chatId}" />
    </fragment>
    <fragment
        android:id="@+id/chat_fragment"
        android:name="com.hanmajid.android.seed.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat">
        <action
            android:id="@+id/action_chat_fragment_to_chat_detail_fragment"
            app:destination="@id/chat_detail_fragment" />
    </fragment>
    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.hanmajid.android.seed.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/explore_fragment"
        android:name="com.hanmajid.android.seed.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" >
        <action
            android:id="@+id/action_explore_fragment_to_userGuideActivity"
            app:destination="@id/userGuideActivity" />
        <action
            android:id="@+id/action_explore_fragment_to_wifiFragment"
            app:destination="@id/wifiFragment" />
    </fragment>
    <fragment
        android:id="@+id/post_fragment"
        android:name="com.hanmajid.android.seed.ui.post.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post">
        <argument
            android:name="postId"
            app:argType="string" />
    </fragment>
    <action
        android:id="@+id/action_global_postFragment"
        app:destination="@id/post_fragment" />
    <fragment
        android:id="@+id/user_fragment"
        android:name="com.hanmajid.android.seed.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_profile" >
        <argument
            android:name="userId"
            app:argType="string" />
    </fragment>
    <action android:id="@+id/action_global_user_fragment" app:destination="@id/user_fragment" />
    <fragment
        android:id="@+id/camera_fragment"
        android:name="com.hanmajid.android.seed.ui.camera.CameraFragment"
        android:label="fragment_camera"
        tools:layout="@layout/fragment_camera" />
    <action android:id="@+id/action_global_cameraFragment" app:destination="@id/camera_fragment" />
    <activity
        android:id="@+id/userGuideActivity"
        android:name="com.hanmajid.android.seed.ui.userguide.UserGuideActivity"
        android:label="activity_user_guide"
        tools:layout="@layout/activity_user_guide" />
    <fragment
        android:id="@+id/wifiFragment"
        android:name="com.hanmajid.android.seed.ui.connectivity.wifi.WifiFragment"
        android:label="WifiFragment" />
</navigation>