<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.hanmajid.android.seed.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_navigationNavGraph"
            app:destination="@+id/navigation_nav_graph" />
        <action
            android:id="@+id/action_homeFragment_to_cameraXFragment"
            app:destination="@id/camera_nav_graph" />
        <action
            android:id="@+id/action_homeFragment_to_AuthNavGraph"
            app:destination="@+id/auth_nav_graph" />
    </fragment>

    <include app:graph="@navigation/navigation_nav_graph" />
    <include app:graph="@navigation/auth_nav_graph" />
    <navigation
        android:id="@+id/camera_nav_graph"
        app:startDestination="@id/cameraXFragment">
        <fragment
            android:id="@+id/cameraXFragment"
            android:name="com.hanmajid.android.seed.CameraXFragment"
            android:label="@string/title_camera_x"
            tools:layout="@layout/fragment_camera_x" />
    </navigation>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.hanmajid.android.seed.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
    <action
        android:id="@+id/action_global_aboutFragment"
        app:destination="@id/aboutFragment" />
</navigation>